--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.pure-table thead {
+  background-color: #c3c3c3;
+}
+
+* {
+  box-sizing: border-box;
 }
